# mol-swatter

./: .gitignore  LICENSE  README.md  requirements.txt
autoencoder/: '  activate.sh  constants.py  defaultrun.sh  get_data.py  get_ir_data.py  plot.py  requirements.txt  run_autoencoder.py  test.sh
autoencoder/models/: autoencoder.py  model.py
autoencoder/saves/: conf.json  keras_metadata.pb  saved_model.pb
autoencoder/saves/variables/: variables.data-00000-of-00001  variables.index
autoencoder/tests/: benchmark.py  test_get_ir_data.py
classifier/: constants.py  run_classifier.py
examples/: example_imports.py
parser/: Cargo.toml  README.md  build.sh  cargo_test.sh  delete.sh  init.vim
parser/src/: constants.rs  get_res.rs  lib.rs
parser/src/funct_groups/: funct_groups.rs  mod.rs  recognizer.rs
parser/src/molecule/: .parser.rs.swo  mod.rs  molecule.rs  parser.rs
parser/src/molecule/test_files/: 1,2-Benzenedicarboxylic acid, diisooctyl ester.mol  Benzeneacetamide, «alpha»-ethyl-.mol  Benzoic acid.mol  Decaborane.mol  Methane.mol  Pentanoic acid.mol
parser/src/parser_common/: common.rs  mod.rs
parser/src/spectra/: mod.rs  parser.rs  spectrum.rs
scraper/: .scraper.py.swo  README.md  \  requirements.txt  scraper.py
scraper/raw_data/: Benzeneacetamide, N,N-dimethyl-.mol  Benzeneacetamide, «alpha»-amino-.mol  Benzeneacetamide.mol  Styrene, oligomers.mol
